# conker

./: .gitignore  HISTORY.md  README.md  ROADMAP.md  SALVAGE_MATRIX.md  STATUS.md  pyproject.toml
blinx/: .gitignore  HISTORY.md  README.md  ROADMAP.md  SALVAGE_MATRIX.md  STATUS.md  requirements.txt  tmp_blinx8_disjoint_recursive.txt
blinx/carving_machine/: __init__.py  models.py  reservoir.py
blinx/conker/: HANDOFF.md  README.md  __init__.py
blinx/docs/: README.md  parallel_exploration.md  presentation.md  rescue.md
carving_machine/: config.py  data.py  training.py
conker/: HANDOFF.md  README.md
conker/data/: tokenizers
conker/docs/: COMPRESSION_MATRIX.md  CONKER10.md  CONKER11.md  CONKER12.md  CONKER13.md  CONKER4B.md  CONKER5.md  CONKER7.md  CONKER8.md  CURRENT_FRONTIER.md  OSCILLATORY_8H_MATRIX.md  POLAR3.md  README.md  SWARM_HANDOFF.md
conker/scripts/: README.md  conker_detect.py  link_parameter_golf_data.zsh  run_bpe_compression_bridge.py  run_conker10_golf_bridge.py  run_conker10_structure_proxy_matrix.py  (+35 more)
docs/: README.md  absorbed_repos.md  current_frontier.md  negative_results.md  parallel_exploration.md  presentation.md  rescue.md  validity.md
giddy-up/: .gitignore  README.md  SALVAGE_MATRIX.md  STATUS.md  pyproject.toml
giddy-up/docs/: ARCHITECTURE.md  README.md  parallel_exploration.md  presentation.md  rescue.md
giddy-up/giddy_up/: __init__.py  _codec.py  attack.py  conker10_adapter.py  features.py  oracle.py
giddy-up/scripts/: run_oracle_analysis.py  run_oracle_attack.py  run_oracle_export.py
legacy_lab/: HANDOFF.md  README.md
(+195 files in other folders)
