[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conker-lab"
version = "0.1.0"
description = "Standalone Conker compression research runtime and branch history."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mlx>=0.29.3",
  "numpy>=1.26",
  "sentencepiece>=0.2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["carving_machine", "carving_machine.*", "conker", "conker.*"]
namespaces = true

